glsl textured solid and matcap error. #44029

Closed
opened 2015-03-17 20:04:09 +01:00 by ratty redemption · 19 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 2.74 b0bbd34 win64.
was working in: 2.74 3824e0f1 win64.

- Short description of error ---

glsl textured solid and matcap error.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

if you compare the two screencaps, the latest build is not displaying textures or materials correctly in the viewport.

Untitled1.png

Untitled2.png

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 2.74 b0bbd34 win64. was working in: 2.74 3824e0f1 win64. - Short description of error --- glsl textured solid and matcap error. - Steps for others to reproduce the error (preferably based on attached .blend file) --- if you compare the two screencaps, the latest build is not displaying textures or materials correctly in the viewport. ![Untitled1.png](https://archive.blender.org/developer/F152434/Untitled1.png) ![Untitled2.png](https://archive.blender.org/developer/F152436/Untitled2.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Could you upload a .blend showing the issue so we can investigate this further?

Could you upload a .blend showing the issue so we can investigate this further?

@JulianEisel sure, i'll prepare one at some point this evening.

@JulianEisel sure, i'll prepare one at some point this evening.

@JulianEisel this simple .blend file produced the same results as the .blend i screen capped previously.

untitled.blend

@JulianEisel this simple .blend file produced the same results as the .blend i screen capped previously. [untitled.blend](https://archive.blender.org/developer/F152453/untitled.blend)
Member

Hmm, can't see anything obviously weird here. Where exactly do you see the issue, or what do I need to do to see it?

Hmm, can't see anything obviously weird here. Where exactly do you see the issue, or what do I need to do to see it?

@JulianEisel i've just tested that .blend file with and without my custom startup.blend and userpref.blend and the error appears with the former, see the next two screencaps.

Untitled4.png
Untitled3.png

edit: to clarify it shows up when i use my custom settings.

@JulianEisel i've just tested that .blend file with and without my custom startup.blend and userpref.blend and the error appears with the former, see the next two screencaps. ![Untitled4.png](https://archive.blender.org/developer/F152484/Untitled4.png) ![Untitled3.png](https://archive.blender.org/developer/F152482/Untitled3.png) **edit:** to clarify it shows up when i use my custom settings.
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Julian Eisel self-assigned this 2015-03-17 23:44:25 +01:00
Member

Okay that means the bug comes from a bad setting or from an Add-on. I'd try to change some OGL related settings in the User Preferences (System tab). If this doesn't help you can try to search the issue in the Add-ons.

Anyway, that's nothing we handle in our tracker. Thanks for the report but this should be closed now.

Okay that means the bug comes from a bad setting or from an Add-on. I'd try to change some OGL related settings in the User Preferences (System tab). If this doesn't help you can try to search the issue in the Add-ons. Anyway, that's nothing we handle in our tracker. Thanks for the report but this should be closed now.

@JulianEisel thanks and i tracked it down to system tab > gpu mipmap generation which even when using factory settings still produces the error if that option is toggled off.

this is only with the latest build not the previous 2.74 ones i've tried, so i still think you should look into this as it might affect other users.

@JulianEisel thanks and i tracked it down to **system tab > gpu mipmap generation** which even when using factory settings still produces the error if that option is toggled **off**. this is only with the latest build not the previous 2.74 ones i've tried, so i still think you should look into this as it might affect other users.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Member

Indeed... @Psy-Fi, any ideas?

Indeed... @Psy-Fi, any ideas?

I broke it, will fix it tommorrow.

I broke it, will fix it tommorrow.

cool, thanks guys.

cool, thanks guys.

This issue was referenced by 72419eebc2

This issue was referenced by 72419eebc26ca17c588b3d7fe5ccbb0f22d33ad4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 72419eebc2.

Closed by commit 72419eebc2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44029
No description provided.