Fix T44029 textures disappear in viewport if GPU mipmap generation is off.

GPUs need a full tree of mipmaps up to dimension 1xn to work. This will
make it so for all imbufs but cost is negligible and it's unlikely that
something could break due to that.